<resources>
    <string name="app_name">MyApplicationChat</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="Lbl_About">About</string>
    <string name="Lbl_Settings">Settings</string>
    <string name="Lbl_EditProfile">Edit Profile</string>
    <string name="Lbl_Rate">Give your rate and feedback</string>
    <string name="Lbl_Rate_Us">Rate</string>
    <string name="Lbl_InviteFriendsToTheApp">Invite Friends to use app</string>
    <string name="Lbl_InviteFriends">Invite Friends</string>
    <string name="Lbl_ContactUs_Privacy">Faq and contact us</string>
    <string name="Lbl_NeedHelp">Need Help?</string>
    <string name="Lbl_Update">Update</string>
    <string name="Lbl_Version_update">Check for the latest version</string>
    <string name="Lbl_privacy_policy">App Terms and Policies</string>
    <string name="Lbl_Privacy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="visit_site">Visit Site</string>
    <string name="about_company">About Company</string>
    <string name="contacts">Contacts</string>
    <string name="about_swit_messenger">About SWIT Messenger</string>
    <string name="swit_messenger_is_a_modern_messaging_app_that_allows_users_to_communicate_with_friends_and_family_in_real_time_thanks_to_a_simple_interface_and_a_variety_of_functions_messenger_becomes_an_ideal_tool_for_maintaining_communication">SWIT Messenger is a modern messaging app that allows users to communicate with friends and family in real time. Thanks to a simple interface and a variety of functions, Messenger becomes an ideal tool for maintaining communication.</string>
    <string name="go_back">Go Back</string>
    <string name="save_changes">Save Changes</string>
    <string name="messenger_setings">Messenger Setings</string>
    <string name="notifications">Notifications</string>
    <string name="don_t_miss_the_new_features_that_have_become_available">Don\'t miss the new features that have become available!</string>
    <string name="at_myapplicationchat_we_value_your_privacy_this_privacy_policy_outlines_how_we_collect_use_and_protect_your_personal_information_when_you_use_our_application_we_ensure_that_all_personal_data_is_handled_with_the_utmost_care_and_respect_for_your_privacy">At SWIT Chat, we value your privacy. This Privacy Policy outlines how we collect, use, and protect your personal information when you use our application. We ensure that all personal data is handled with the utmost care and respect for your privacy.</string>
    <string name="_1_data_collection_we_collect_personal_information_such_as_your_name_email_address_and_profile_picture_when_you_sign_up_for_our_service_we_also_collect_data_on_your_usage_of_the_app_including_interactions_with_other_users_shared_content_and_device_information">1. Data Collection: We collect personal information such as your name, email address, and profile picture when you sign up for our service. We also collect data on your usage of the app, including interactions with other users, shared content, and device information.</string>
    <string name="_2_data_usage_the_information_we_collect_is_used_to_provide_and_improve_our_service_this_includes_delivering_messages_personalizing_your_experience_and_ensuring_security_across_the_platform_we_do_not_share_your_personal_information_with_third_parties_except_when_required_by_law">2. Data Usage: The information we collect is used to provide and improve our service. This includes delivering messages, personalizing your experience, and ensuring security across the platform. We do not share your personal information with third parties, except when required by law.</string>
    <string name="_3_data_protection_we_use_industry_standard_security_measures_to_protect_your_information_from_unauthorized_access_disclosure_alteration_or_destruction_we_regularly_review_and_update_our_security_practices_to_keep_your_data_safe">3. Data Protection: We use industry-standard security measures to protect your information from unauthorized access, disclosure, alteration, or destruction. We regularly review and update our security practices to keep your data safe.</string>
    <string name="if_you_have_any_questions_about_this_privacy_policy_please_contact_us_at_support_myapplicationchat_com">If you have any questions about this Privacy Policy, please contact us at support@myapplicationchat.com.</string>
    <string name="policy_version_1_0_0">Policy Version: 1.0.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_chat_background">Change chat background</string>
    <string name="adjust_the_background_of_the_chat_to_suit_your_mood">Adjust the background of the chat to suit your mood!</string>
</resources>